@@ -1,6 +1,6 @@
 % File src/library/parallel/man/mclapply.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2009-2018 R Core Team
+% Copyright 2009-2019 R Core Team
 % Distributed under GPL 2 or later
 
 \name{mclapply}
@@ -140,7 +140,9 @@ mcMap(f, ...)
   involved in the failure, even if not all of them failed. If any forked
   process is killed or fails to deliver a result for any reason, values
   involved in the failure will be \code{NULL}. To allow detection of such
-  errors, \code{FUN} should not return \code{NULL}.
+  errors, \code{FUN} should not return \code{NULL}. As of \R 4.0, the
+  return value of \code{mcmapply} is always a list when it needs to contain
+  \code{"try-error"} objects (\code{SIMPLIFY} is overridden to \code{FALSE}).
 }
 
 \section{Warning}{
